[gd_scene load_steps=3 format=3 uid="uid://cug0k1y53x1ga"]

[ext_resource type="Script" path="res://menus/pause_menu/pause_menu.gd" id="1_ofb6n"]
[ext_resource type="Theme" uid="uid://bg1jxqncw3437" path="res://themes/default_theme.tres" id="2_2t8gf"]

[node name="PauseMenu" type="Node"]
script = ExtResource("1_ofb6n")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_2t8gf")

[node name="PauseMenuButtons" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="Control/PauseMenuButtons"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text = "RESUME"

[node name="Save" type="Button" parent="Control/PauseMenuButtons"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text = "SAVE"

[node name="Settings" type="Button" parent="Control/PauseMenuButtons"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text = "SETTINGS"

[node name="MainMenu" type="Button" parent="Control/PauseMenuButtons"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
text = "MAIN MENU"
